[ignore] xforms example: fixed display issues on IE.
svn path=/trunk/eXist/; revision=10424


Former-commit-id: 4de05fc15cebdac1fc77aff36ddac6795985e800

--- a/webapp/xforms/tasks/todo.css
+++ b/webapp/xforms/tasks/todo.css
@@ -8,7 +8,7 @@
     padding-bottom: 5px;
 }
 
-.xforms-value
+.xforms-input .xforms-value
 {
     width: 280px;
 }
@@ -38,7 +38,6 @@ textarea.xforms-value
 }
 
 table {
-    width: 100%;
 }
 
 td, th {
